@@ -25,6 +25,7 @@
         <groupId>org.wso2.ei</groupId>
         <artifactId>4.1.1-Expose-back-ends-exposed-over-HTTP-as-SOAP-service</artifactId>
         <version>6.4.0</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>4.1.1.1-Expose-a-SOAP-service-as-SOAP-service-using-proxy-service</artifactId>
@@ -35,48 +36,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
-                <inherited>false</inherited>
-                <configuration>
-                    <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
-                    <disableXmlReport>false</disableXmlReport>
-                    <parallel>false</parallel>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-                    <systemProperties>
-                        <property>
-                            <name>test.resources.dir</name>
-                            <value>
-                                ${basedir}/../../resources/
-                            </value>
-                        </property>
-                        <property>
-                            <name>framework.resource.location</name>
-                            <value>
-                                ${basedir}/src/test/resources/
-                            </value>
-                        </property>
-                        <property>
-                            <name>server.list</name>
-                            <value>
-                                ESB
-                            </value>
-                        </property>
-                        <property>
-                            <name>usedefaultlisteners</name>
-                            <value>false</value>
-                        </property>
-                        <sec.verifier.dir>${basedir}/target/security-verifier/</sec.verifier.dir>
-                        <maven.test.haltafterfailure>false</maven.test.haltafterfailure>
-                        <carbon.zip>
-                            ${basedir}/../../../distribution/target/wso2ei-${product.ei.version}.zip
-                        </carbon.zip>
-                        <instr.file>${basedir}/../coverage-report/instrumentation.txt</instr.file>
-                        <filters.file>${basedir}/../coverage-report/filters.txt</filters.file>
-                    </systemProperties>
-                    <workingDirectory>${basedir}/target</workingDirectory>
-                </configuration>
+                <inherited>true</inherited>
             </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
